--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "scout",
   "displayName": "Scout",
-  "description": "AI powered web accessibility",
+  "description": "AI powered web accessibility assistant for VS Code",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.101.0"
   },
   "categories": [
+    "Linters",
     "Other"
   ],
-  "activationEvents": [],
+  "keywords": [
+    "accessibility",
+    "a11y",
+    "html",
+    "jsx",
+    "linting"
+  ],
+  "activationEvents": [
+    "onLanguage:html",
+    "onLanguage:jsx",
+    "onLanguage:tsx"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "scout.helloWorld",
-        "title": "Hello World"
+        "command": "scout.scanWorkspace",
+        "title": "Scout: Scan Workspace for Accessibility Issues"
       }
     ]
   },
