--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@types/js-beautify": "^1.14.3",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.101.0",
@@ -74,13 +75,14 @@
     "@vscode/test-electron": "^2.5.2",
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^9.25.1",
+    "js-beautify": "^1.15.4",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "axe-core": "^4.8.3",
-    "@mistralai/mistralai": "^0.0.10"
+    "@mistralai/mistralai": "^0.0.10",
+    "axe-core": "^4.8.3"
   }
 }
