--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "Scout",
   "description": "AI powered web accessibility assistant for VS Code",
   "version": "0.0.1",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/meenakship3/scout.git"
+  },
   "engines": {
     "vscode": "^1.101.0"
   },
